add registration form

--- a/DOM/vanilaCalculator.html
+++ b/DOM/vanilaCalculator.html
@@ -35,7 +35,7 @@
       const quantity = document.querySelector('.quantity')
       const total = document.querySelector('.total')
 
-      //create the functions for
+      //create  functions 
       function calculate(){
         //   console.log('😂🤣😂🤣');
         const myprice =price.value
